add some styling css and mui material

--- a/src/components/DetailsPage/DetailsPage.css
+++ b/src/components/DetailsPage/DetailsPage.css
@@ -1,3 +1,12 @@
 .css-1nieira-MuiPaper-root-MuiCard-root {
     margin: auto;
 }
+
+.css-xn6ruc {
+    margin: 50px;
+    padding: 100px;
+}
+
+.detailDiv {
+    margin: 50px;
+}
